update molecule tests

--- a/.github/workflows/test-role.yaml
+++ b/.github/workflows/test-role.yaml
@@ -18,17 +18,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # prop_type:
-        #   - simple_other
-        #   - simple_target
-        #   - simple_controller
-        #   - release_other
-        #   - release_target
-        #   - release_controller
-        #   - compress # (full=remote, split=local)
-        # call_mode:
-        #   - full
-        #   - split
+        call_mode:
+          - full
+          # - split
         ansible_ver:
           - "06"
           - "07"
@@ -43,6 +35,7 @@ jobs:
           submodules: true
       - name: test role
         env:
+          ANSIBLE_CALL_MODE: ${{ matrix.call_mode }}
           IMAGE_NAME: ansible-${{ matrix.ansible_ver }}:latest
           ANSIBLE_GITHUB_TOKEN: ${{ secrets.LOCAL_WS_TOKEN }}
         run: molecule/default/run-tests.sh
