--- a/molecule/default/converge.yaml
+++ b/molecule/default/converge.yaml
@@ -1,9 +1,6 @@
 ---
 - name: Perform actions from inventory variables
   hosts: all
-  vars:
-    unit_name: gaiad
-    regexp_line: '.+ committed state .+ height=\d{2,} .+'
   pre_tasks:
     - name: Create a check mode flag if running in check mode
       ansible.builtin.file:
@@ -12,9 +9,15 @@
         mode: "0644"
       check_mode: false
       when: ansible_check_mode
+      tags: [always]
     - name: Remove the check mode flag if not running in check mode
       ansible.builtin.file:
         path: "{{ check_flag }}"
         state: absent
       when: not ansible_check_mode
-  tasks: []
+      tags: [always]
+  tasks:
+    - name: Maintenance gaiad service
+      ansible.builtin.include_role:
+        name: ansible-mega-service
+      tags: [service-gaiad]
