--- a/molecule/default/prepare.yaml
+++ b/molecule/default/prepare.yaml
@@ -5,21 +5,52 @@
   gather_facts: false
   no_log: "{{ molecule_no_log }}"
   vars:
-    roles_dir: "{{ lookup('env', 'HOME') }}/.ansible/roles"
+    roles_dir: "{{ lookup('env', 'ANSIBLE_ROLES_PATH').split(':')[-1] }}"
   tasks:
+    # - name: Install git
+    #   ansible.builtin.apt:
+    #     name: git
+    #     state: present
+    #     update_cache: true
+    #     install_recommends: false
+    #   register: _install_packages
+    #   until: _install_packages is succeeded
+    #   retries: 2
+    #   delay: 1
+    # - name: Create molecule roles directory
+    #   ansible.builtin.file:
+    #     path: "{{ roles_dir }}"
+    #     state: directory
+    #     recurse: true
+    #     force: true
+    # - name: Clone depend roles
+    #   ansible.builtin.git:
+    #     name: "https://github.com/raven428/{{ role }}.git"
+    #     dest: "{{ roles_dir }}/{{ role }}"
+    #     accept_newhostkey: true
+    #   loop:
+    #     - "ansible-mega-var"
+    #     - "ansible-mega-launch"
+    #   loop_control:
+    #     loop_var: role
     - name: Create molecule roles directory
       ansible.builtin.file:
         path: "{{ roles_dir }}"
         state: directory
         force: true
         recurse: true
-    - name: Symbolic link to role
+    - name: Symbolic links to roles
       ansible.builtin.file:
-        src: /ansible
-        dest: "{{ roles_dir }}/ansible-mega-service"
+        src: "/ansible/deps/roles/{{ role }}"
+        dest: "{{ roles_dir }}/{{ role }}"
         state: link
         force: true
-
+      loop:
+        - "ansible-mega-var"
+        - "ansible-mega-launch"
+        - "ansible-mega-service"
+      loop_control:
+        loop_var: role
 - name: Prepare targets
   hosts: all
   tasks: []
