add repo key and file

--- a/molecule/default/prepare.yaml
+++ b/molecule/default/prepare.yaml
@@ -53,4 +53,8 @@
         loop_var: role
 - name: Prepare targets
   hosts: all
-  tasks: []
+  tasks:
+    - name: Install requirements
+      ansible.builtin.apt:
+        name: gpg
+        update_cache: true
