--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,6 +2,8 @@
 dependency:
   name: galaxy
   enabled: true
+  options:
+    role-file: molecule/default/requirements.yaml
 driver:
   # see molecule_docker/playbooks for example
   name: docker
