--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,4 +9,8 @@ galaxy_info:
   galaxy_tags:
     - deploy
     - service
-dependencies: []
+dependencies:
+  - name: raven428.mega_var
+    version: 1.0.1
+  - name: raven428.mega_launch
+    version: 1.0.1
