--- a/tasks/_install.yaml
+++ b/tasks/_install.yaml
@@ -31,8 +31,21 @@
   ansible.builtin.include_tasks: _repo.yaml
   loop_control:
     loop_var: i
-  loop: "{{ mesv_install_pkgs | default([]) | map('combine', {'repo_key': {'state':
-    'present'}, 'repo_file': {'state': 'present'}}, recursive=True) | list }}"
+  loop: >-
+    {%- set result = [] -%}
+    {%- for item in mesv_install_pkgs | default([]) -%}
+      {%- set new_item = item | combine({}, recursive=True) -%}
+      {%- if 'repo_key' in item -%}
+        {%- set new_item = new_item | combine({'repo_key': item.repo_key |
+        combine({'state': 'present'}, recursive=True)}, recursive=True) -%}
+      {%- endif -%}
+      {%- if 'repo_file' in item -%}
+        {%- set new_item = new_item | combine({'repo_file': item.repo_file |
+        combine({'state': 'present'}, recursive=True)}, recursive=True) -%}
+      {%- endif -%}
+      {%- set _ = result.append(new_item) -%}
+    {%- endfor -%}
+    {{ result }}
 
 - name: Install packages install
   ansible.builtin.include_role:
@@ -51,8 +64,18 @@
   delay: 1
   loop_control:
     loop_var: i
-  loop: "{{ mesv_install_pkgs | default([]) | map('combine', {'repo_file': {'state':
-    'absent', 'update_cache': false}}, recursive=True) | list }}"
+  loop: >-
+    {%- set result = [] -%}
+    {%- for item in mesv_install_pkgs | default([]) -%}
+      {%- set new_item = item | combine({}, recursive=True) -%}
+      {%- if 'repo_file' in item -%}
+        {%- set new_item = new_item | combine({'repo_file': item.repo_file |
+          combine({'state': 'absent', 'update_cache': false}, recursive=True)},
+          recursive=True) -%}
+        {%- set _ = result.append(new_item) -%}
+      {%- endif -%}
+    {%- endfor -%}
+    {{ result }}
 
 - name: Install templates upload
   ansible.builtin.include_role:
