update Megalinter configs

--- a/.megalinter.yml
+++ b/.megalinter.yml
@@ -47,3 +47,4 @@ REPOSITORY_DEVSKIM_ARGUMENTS:
   # - "DS162092,DS126858"
 ANSIBLE_ANSIBLE_LINT_ARGUMENTS: "-f pep8 --force-color"
 ANSIBLE_ANSIBLE_LINT_COMMAND_REMOVE_ARGUMENTS: "-v"
+REPOSITORY_KINGFISHER_ARGUMENTS: "--exclude .git"
